# cast_trait_object

./: Cargo.toml  README.md
cast_macros/: Cargo.toml
cast_macros/src/: lib.rs
cast_trait_object/: .gitignore  Cargo.toml  README.md  README.tpl
cast_trait_object/src/: lib.rs
cast_trait_object_macros/: Cargo.toml
cast_trait_object_macros/src/: lib.rs
external_test/: Cargo.toml
external_tests/: Cargo.toml
external_tests/src/: lib.rs
src/: lib.rs
