[package]
name = "cast_trait_object"
version = "0.1.1"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Cast between trait objects using only safe Rust."
repository = "https://github.com/Lej77/cast_trait_object"
homepage = "https://github.com/Lej77/cast_trait_object"
documentation = "https://docs.rs/cast_trait_object"
categories = ["no-std", "rust-patterns"]
keywords = ["trait", "cast", "any", "upcast"]
readme = "README.md"
include = ["Cargo.toml", "src", "README*", "CHANGELOG*", "LICENSE*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]

full = ["alloc", "proc-macros"]
docs = ["full"]

# Enable features that require an allocator.
alloc = []
# Enable procedural macros.
proc-macros = ["cast_trait_object_macros"]


[dependencies]
cast_trait_object_macros = { optional = true, path = "../cast_trait_object_macros", version = "0.1.1" }


[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.playground]
features = ["full"]
